--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/breeze": "^2.2.3",
         "laravel/pail": "^1.2",
         "laravel/pint": "^1.18.1",
+        "laravel/telescope": "^5.2",
         "mockery/mockery": "^1.6.12",
         "nunomaduro/collision": "^8.5",
         "pestphp/pest": "^3.5",
@@ -72,7 +73,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope"
+            ]
         }
     },
     "config": {
